--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,5 +1,7 @@
 
-    <!-- </div> -->
+
+
+
 
     <!-- JS Libraries-->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
@@ -13,7 +15,14 @@
         $("#lbImg").attr("src", card.url);
         $("#lbTitle").text(card.title);
         $("#lbDescription").text(card.desc);
-        $("#lightbox").removeClass("hidden");
+        // $("#lightbox").removeClass("hidden");
+        $("#lightbox").addClass("lbAnimate");
+      }
+
+      function navSelectOption(pos){
+        console.log("selecting: " + pos);
+        $("#navbar > ul > li.active").removeClass("active");
+        $("#navbar > ul > li:nth-child(" + pos + ")").addClass("active");
       }
     </script>
   </body>
