--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,8 +1,7 @@
 .album {
   min-height: 50rem;
-  padding-top: 10rem;
-  padding-top:100px;
-  padding-bottom: 3rem;
+  /*padding-top:40px;*/
+  /*padding-bottom: 3rem;*/
   /*background-color: #f7f7f7;*/
   display: block;
   position: relative;
@@ -29,8 +28,23 @@
 
 
 #navbar {
-  color: black;
+  /*color: black;*/
   border: none;
+}
+
+.nav>li>a:focus, .nav>li>a:hover {
+    text-decoration: none;
+    background-color: rgba(60, 60, 60, 1);
+}
+
+a:focus, a:hover {
+    color: white;
+    text-decoration: underline;
+}
+
+.navbar-inverse {
+  background-color: rgba(60, 60, 60, 1);
+  border-color: rgba(60, 60, 60, 1);
 }
 
 .navbar-brand {
@@ -45,43 +59,95 @@
     color: white;
 }
 
+#9b2f74
+
+.nav-pills>li.active>a, .nav-pills>li.active>a:focus, .nav-pills>li.active>a:hover {
+    background-color: #9b2f74;
+}
+
+.nav-pills>li.active>a, .nav-pills>li.active>a:focus, .nav-pills>li.active {
+    background-color: #9b2f74;
+}
 
 #aboutMe > div {
     padding-top:20px;
 }
 
 /*#navbar > ul > li:nth-child(4) { border: none; }*/
-#navbar > ul > li:nth-child(4) > a:hover { border: none; color: white !important; background: transparent; }
-#navbar > ul > li:nth-child(4) > a::after { content: ""; background: white; height: 2px; position: absolute; width: 100%; left: 0px; bottom: -1px; transition: all 250ms ease 0s; transform: scale(0); }
+/*#navbar > ul > li:nth-child(4) > a:hover { border: none; color: white !important; background: transparent; }
+#navbar > ul > li:nth-child(4) > a::after { content: ""; background: white; height: 2px; position: absolute; width: 100%; left: 0px; bottom: -1px; transition: all 250ms ease 0s; transform: scale(0); }*/
 
 
 .lightbox {
-  padding-top: 60px;
-  padding-left: 25%;
-  padding-right: 25%;
-  padding-bottom: 40px;
+  /*padding-top: 60px;
+  padding-left: 5%;
+  padding-right: 5%;
   top: 0px;
   left: 0px;
   width: 100%;
   height: 100vh;
-  min-height: 100%;
-  background: rgba(0, 0, 0, 0.8);
-  opacity: 0.9;
-  z-index: 1000;
+  min-height: 100%;*/
+
+  position: relative;
+  padding-top: 60px;
+  padding-bottom: 60px;
+  /*padding:%5;*/
+  margin:0;
+  top:0;
+  left:0;
+  width: 100%;
+  /*height: auto;*/
+  align-content: center;
+
+  /*background: rgba(255, 255, 255, 0.8);*/
+  background: rgba(60, 60, 60, 1);
+  /*opacity: 0.9;*/
+  /*z-index: 1000;*/
+
+
+  overflow:hidden;
+  display: block;
+  opacity: 0;
+  height: 0px;
+  -webkit-transition: all 0.8s ease;
+  -moz-transition: all 0.8s ease;
+  transition: all 0.8s ease;
 }
 
+#lbImg {
+  /*min-width: 50%;
+  min-height: auto;*/
+  width:auto;
+  height:auto;
+}
 
 #lightbox > div {
-  height: 100%;
-  background: rgba(0, 0, 0, 0);
+  /*min-height:80%;*/
+  /*height: auto;*/
+
+  padding-left: 5%;
+  padding-right: 5%;
+  /*max-width: 640px;*/
+  /*background: rgba(255, 255, 255, 0.8);*/
+  background: rgba(60, 60, 60, 1);
   border: none;
+}
+
+.lbAnimate {
+  opacity: 1;
+  height: auto;
+  -webkit-transition: all 0.8s ease;
+  -moz-transition: all 0.8s ease;
+  transition: all 0.8s ease;
 }
 
 #lbTitle {
   color: white;
+  font-size: 1em;
 }
 
 #lbDescription {
   color: white;
+  font-size: 0.75em;
   font-style: italic;
 }
