--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -33,11 +33,11 @@
           <a class="navbar-brand" href="#">Agnieszka Wiewiorowska</a>
         </div>
         <div id="navbar" class="collapse navbar-collapse navbar-right">
-          <ul class="nav nav-pills navbar-bottom">
-            <li role="presentation" class="active"><a href="#"><h6>All</h6></a></li>
-            <li><a href="#"><h6>Architecture</h6></a></li>
-            <li><a href="#"><h6>Art</h6></a></li>
-            <li><a id="aboutMeOpt" href="#aboutMe" data-toggle="collapse"><h6>About Me</h6></a></li>
+          <ul class="nav nav-pills nav-fill navbar-bottom">
+            <li role="presentation" class="active" onclick="navSelectOption(1);"><a href="#"><h6>All</h6></a></li>
+            <li role="presentation" class="" onclick="navSelectOption(2);"><a href="#"><h6>Architecture</h6></a></li>
+            <li role="presentation" class="" onclick="navSelectOption(3);"><a href="#"><h6>Art</h6></a></li>
+            <li role="presentation" class="" onclick="navSelectOption(4);"><a id="aboutMeOpt" href="#aboutMe" data-toggle="collapse"><h6>About Me</h6></a></li>
           </ul>
         </div>
         <!--/.nav-collapse -->
@@ -50,16 +50,20 @@
         <div id="aboutMe" class="page-header collapse">
             <div class="container">
               <div class="row">
-                <div class="col-sm-8 py-4">
+                <div class="col-sx-12 col-sm-12 col-med-6 col-sm-8">
                   <h4 class="text-white">About Me</h4>
-                  <h5 class="text-muted">Description khfhroighforehgoirehgohorehgoirehiogh.</h5>
+                    <blockquote class="blockquote-reverse">
+                      <p style="font-style:italic;">I'm a great architect and artist, so... Hire me bitch!</p>
+                      <footer>Someone famous</footer>
+                    </blockquote>
                 </div>
-                <div class="col-sm-4 py-4">
+                <!-- <div class="col-sm-4 py-4"> -->
+                <div class="col-sx-12 col-sm-12 col-med-6 col-sm-4">
                   <h4 class="text-white">Contact Details</h4>
                   <ul class="list-unstyled">
-                    <li>LinkedIn: <a href="https://www.linkedin.com/in/awiewiorowska/" class="text-white">https://www.linkedin.com/in/awiewiorowska</a></li>
-                    <li>Email: <a href="mailto:a.wiewiorowska@gmail.com" class="text-white">a.wiewiorowska@gmail.com</a></li>
-                    <li>Telephone: +353 xxx xx xx</li>
+                    <li><a href="https://www.linkedin.com/in/awiewiorowska/" class="text-white"><i class="fa fa-linkedin-square" aria-hidden="true"></i> linkedin.com/in/awiewiorowska</a></li>
+                    <li><a href="mailto:a.wiewiorowska@gmail.com" class="text-white"><i class="fa fa-envelope-square" aria-hidden="true"></i> a.wiewiorowska@gmail.com</a></li>
+                    <li><i class="fa fa-phone-square" aria-hidden="true"></i> +353 xxx xx xx</li>
                   </ul>
                 </div>
               </div>
@@ -67,13 +71,20 @@
         </div>
       </div>
 
-      <div id="lightbox" class="lightbox hidden" onclick='$("#lightbox").toggleClass("hidden");'>
+      <!-- $("#lightbox").addClass("hidden"); -->
+      <div id="lightbox" class="lightbox" onclick='$("#lightbox").removeClass("lbAnimate");'>
           <div class="thumbnail">
-            <img id="lbImg" class="img-responsive img-thumbnail" src="https://dummyimage.com/500x500/f00/fff">
-            <div class="caption">
+                        <!-- <div class="caption"> -->
+            <div class="col-xs-0 col-sm-0 col-md-2 col-lg-2"></div>
+            <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
+                <img id="lbImg" class="img-responsive img-thumbnail" src="https://dummyimage.com/500x500/f00/fff">
+            </div>
+            <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4 caption">
+            <!-- <div class="caption"> -->
               <h3 id="lbTitle" class="text-white">Title</h3>
               <h5 id="lbDescription" class="text-white">Description</h5>
             </div>
           </div>
+
         </div>
       </div>
