--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,10 +1,7 @@
 .album {
-  min-height: 50rem;
-  /*padding-top:40px;*/
-  /*padding-bottom: 3rem;*/
-  /*background-color: #f7f7f7;*/
+  /*min-height: 50rem;
   display: block;
-  position: relative;
+  position: relative;*/
 }
 
 .card-text {
@@ -12,19 +9,12 @@
   text-align: center;
 }
 
+.card-greyed {
+  -webkit-filter: grayscale(1);
+  filter: grayscale(1);
+}
 
 
-
-.nav-tabs { border-bottom: 2px solid #DDD; }
-.nav-tabs > li.active > a, .nav-tabs > li.active > a:focus, .nav-tabs > li.active > a:hover { border-width: 0; }
-.nav-tabs > li > a { border: none; color: #666; }
-.nav-tabs > li.active > a, .nav-tabs > li > a:hover { border: none; color: #4285F4 !important; background: transparent; }
-.nav-tabs > li > a::after { content: ""; background: #4285F4; height: 2px; position: absolute; width: 100%; left: 0px; bottom: -1px; transition: all 250ms ease 0s; transform: scale(0); }
-.nav-tabs > li.active > a::after, .nav-tabs > li:hover > a::after { transform: scale(1); }
-
-/*.tab-nav > li > a::after { background: #21527d none repeat scroll 0% 0%; color: #fff; }
-.tab-pane { padding: 15px 0; position: relative; }
-.tab-content{padding:20px}*/
 
 
 #navbar {
@@ -33,13 +23,13 @@
 }
 
 .nav>li>a:focus, .nav>li>a:hover {
-    text-decoration: none;
-    background-color: rgba(60, 60, 60, 1);
+  text-decoration: none;
+  background-color: rgba(60, 60, 60, 1);
 }
 
 a:focus, a:hover {
-    color: white;
-    text-decoration: underline;
+  color: white;
+  text-decoration: underline;
 }
 
 .navbar-inverse {
@@ -61,34 +51,22 @@ a:focus, a:hover {
 
 
 .nav-pills>li.active>a, .nav-pills>li.active>a:focus, .nav-pills>li.active>a:hover {
-    background-color: #9b2f74;
+  background-color: #9b2f74;
 }
 
 
 #aboutMe > div {
-    padding-top:20px;
+  padding-top:20px;
 }
 
-/*#navbar > ul > li:nth-child(4) { border: none; }*/
-/*#navbar > ul > li:nth-child(4) > a:hover { border: none; color: white !important; background: transparent; }
-#navbar > ul > li:nth-child(4) > a::after { content: ""; background: white; height: 2px; position: absolute; width: 100%; left: 0px; bottom: -1px; transition: all 250ms ease 0s; transform: scale(0); }*/
 
 
 .lightbox {
-  /*padding-top: 60px;
-  padding-left: 5%;
-  padding-right: 5%;
-  top: 0px;
-  left: 0px;
-  width: 100%;
-  height: 100vh;
-  min-height: 100%;*/
-
   position: relative;
-  padding-top: 60px;
-  padding-bottom: 60px;
+  padding-top: 50px;
+  padding-bottom: 50px;
   /*padding:%5;*/
-  margin:0;
+  margin-top:30px;
   top:0;
   left:0;
   width: 100%;
@@ -105,6 +83,12 @@ a:focus, a:hover {
   display: block;
   opacity: 0;
   height: 0px;
+  -webkit-transition: all 0.8s ease;
+  -moz-transition: all 0.8s ease;
+  transition: all 0.8s ease;
+}
+
+[data-card-id]{
   -webkit-transition: all 0.8s ease;
   -moz-transition: all 0.8s ease;
   transition: all 0.8s ease;
