--- a/views/home.ejs
+++ b/views/home.ejs
@@ -7,12 +7,7 @@
 
           <% siteData.imgs.forEach(function(card){ %>
 
-            <!-- <div class="card">
-              <img class="img-thumbnail center-block" src="https://inkscapetutorials.files.wordpress.com/2009/05/top10_7.png" alt="Card image cap">
-              <p class="card-text"><%= card.title %></p>
-            </div> -->
-
-            <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4">
+            <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4" data-card-id="<%= card.id %>" data-card-category="<%= card.category %>">
               <div class="thumbnail" style="border: none;">
                 <a href="#" onclick="showDetails(<%= JSON.stringify(card) %>);">
                     <img class="img-responsive img-thumbnail" src="<%= card.smUrl %>" alt="<%= card.title %>">
