--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -49,7 +49,7 @@
       <div class="container">
         <div id="aboutMe" class="page-header collapse">
             <div class="container">
-              <div class="row">
+              <!-- <div class="row"> -->
                 <div class="col-sx-12 col-sm-12 col-med-6 col-sm-8">
                   <h4 class="text-white">About Me</h4>
                     <blockquote class="blockquote-reverse">
@@ -66,7 +66,7 @@
                     <li><i class="fa fa-phone-square" aria-hidden="true"></i> +353 xxx xx xx</li>
                   </ul>
                 </div>
-              </div>
+              <!-- </div> -->
             </div>
         </div>
       </div>
