Added support for additional images in architecture category

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -5,11 +5,11 @@
 
         <div class="row">
 
-          <% siteData.imgs.forEach(function(card){ %>
+          <% siteData.cards.forEach(function(card){ %>
 
             <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4" data-card-id="<%= card.id %>" data-card-category="<%= card.category %>">
               <div class="thumbnail" style="border: none;">
-                <a href="#" onclick="showDetails(<%= JSON.stringify(card) %>);">
+                <a href="#" onclick="showLightBox(<%= JSON.stringify(card) %>);">
                     <img class="img-responsive img-thumbnail" src="<%= card.smUrl %>" alt="<%= card.title %>">
                   <div class="caption">
                     <p class="card-text"><%= card.title %></p>
