--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -72,12 +72,12 @@
       </div>
 
       <!-- $("#lightbox").addClass("hidden"); -->
-      <div id="lightbox" class="lightbox" onclick='$("#lightbox").removeClass("lbAnimate");'>
+      <div id="lightbox" class="lightbox" onclick='hideLightBox();'>
           <div class="thumbnail">
                         <!-- <div class="caption"> -->
             <div class="col-xs-0 col-sm-0 col-md-2 col-lg-2"></div>
             <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
-                <img id="lbImg" class="img-responsive img-thumbnail" src="https://dummyimage.com/500x500/f00/fff">
+                <img id="lbImg" class="img-responsive img-thumbnail" src="https://dummyimage.com/640x640/000/fff">
             </div>
             <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4 caption">
             <!-- <div class="caption"> -->
@@ -87,4 +87,16 @@
           </div>
 
         </div>
+
+
+        <!-- Left and right controls -->
+        <a class="left carousel-control hidden" href="#" data-slide="prev" onclick="prevImg();">
+          <span class="glyphicon glyphicon-chevron-left"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a class="right carousel-control hidden" href="#" data-slide="next" onclick="nextImg();">
+          <span class="glyphicon glyphicon-chevron-right"></span>
+          <span class="sr-only">Next</span>
+        </a>
+
       </div>
