--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,9 +1,3 @@
-.album {
-  /*min-height: 50rem;
-  display: block;
-  position: relative;*/
-}
-
 .card-text {
   font-size: 0.85em;
   text-align: center;
@@ -63,55 +57,40 @@ a:focus, a:hover {
 
 .lightbox {
   position: relative;
-  padding-top: 50px;
-  padding-bottom: 50px;
-  /*padding:%5;*/
-  margin-top:30px;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  margin-top:50px;
   top:0;
   left:0;
   width: 100%;
-  /*height: auto;*/
   align-content: center;
 
   /*background: rgba(255, 255, 255, 0.8);*/
   background: rgba(60, 60, 60, 1);
-  /*opacity: 0.9;*/
-  /*z-index: 1000;*/
-
 
   overflow:hidden;
   display: block;
   opacity: 0;
   height: 0px;
-  -webkit-transition: all 0.8s ease;
-  -moz-transition: all 0.8s ease;
-  transition: all 0.8s ease;
+  -webkit-transition: all 0.7s ease;
+  -moz-transition: all 0.7s ease;
+  transition: all 0.7s ease;
 }
 
-[data-card-id]{
-  -webkit-transition: all 0.8s ease;
-  -moz-transition: all 0.8s ease;
-  transition: all 0.8s ease;
-}
 
 #lbImg {
-  /*min-width: 50%;
-  min-height: auto;*/
   width:auto;
   height:auto;
 }
 
 #lightbox > div {
-  /*min-height:80%;*/
-  /*height: auto;*/
-
-  padding-left: 5%;
-  padding-right: 5%;
-  /*max-width: 640px;*/
-  /*background: rgba(255, 255, 255, 0.8);*/
+  padding-top: 20px;
+  padding-left: 20px;
+  padding-right: 40px;
   background: rgba(60, 60, 60, 1);
   border: none;
 }
+
 
 .lbAnimate {
   opacity: 1;
@@ -121,13 +100,6 @@ a:focus, a:hover {
   -webkit-transition: all 0.6s ease;
   -moz-transition: all 0.6s ease;
   transition: all 0.6s ease;
-}
-
-.vertical-center {
-  min-height: 100%;  /* Fallback for browsers do NOT support vh unit */
-  min-height: 100vh; /* These two lines are counted as one :-)       */
-  /*display: flex;*/
-  align-items: center;
 }
 
 
