--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,6 +1,6 @@
 <% include partials/header.ejs %>
 
-    <div class="album text-muted">
+    <div class="text-muted">
       <div class="container">
 
         <div class="row">
