--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -4,7 +4,8 @@
 
 
     <!-- JS Libraries-->
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <!-- <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script> -->
+    <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
 
@@ -14,10 +15,10 @@
       var childIdx = 0;
 
       function showLightBox(card){
-        // console.log(card);
         currentCard = card;
 
         $("#lbImg").attr("src", card.url);
+        $("#lbImg").addClass("img-thumbnail");
         $("#lbTitle").text(card.title);
         $("#lbDescription").text(card.desc);
 
@@ -32,10 +33,10 @@
 
 
       function hideLightBox(){
-        // console.log(card);
         currentCard = null;
         childIdx = 0;
 
+        $("#lbImg").removeClass("img-thumbnail");
         $("#lbImg").attr("src", "");
         $("#lbTitle").text("");
         $("#lbDescription").text("");
@@ -65,6 +66,7 @@
         event.stopPropagation();
       }
 
+
       function prevImg(event){
         if ( currentCard.imgs && (currentCard.imgs.length > 1) && (childIdx > 0) ){
           childIdx--;
@@ -88,21 +90,42 @@
       }
 
 
+      function hideCards(category){
+        var selector = "";
+        if ( !category || category === ""){
+          selector = "div[data-card-id]";
+        } else {
+          selector = "div[data-card-category='"+category+"']";
+        }
+        $(selector).hide(500);
+      }
+
+
+      function showCards(category){
+        var selector = "";
+        if ( !category || category === ""){
+          selector = "div[data-card-id]";
+        } else {
+          selector = "div[data-card-category='"+category+"']";
+        }
+        $(selector).show(500);
+      }
+
       function navSelectOption(pos){
-        // console.log("selecting: " + pos);
         if ( pos < 4 ){
           $("#navbar > ul > li.active").removeClass("active");
           $("#navbar > ul > li:nth-child(" + pos + ")").addClass("active");
           $("#lightbox").removeClass("lbAnimate");
         }
         if ( pos === 1 ){
-          $( "[data-card-id]" ).show("slow", function(){this.setAttribute("display", "block");} );
+          showCards();
         } else if ( pos === 2 ){
-          $( "[data-card-category='Art']" ).hide("slow", function(){$( "[data-card-category='Art']" ).setAttribute("display", "none");});
-          $( "[data-card-category='Architecture']" ).show("slow", function(){this.setAttribute("display", "block");});
+          hideCards("Art");
+          showCards("Architecture");
         } else if ( pos === 3 ){
-          $( "[data-card-category='Art']" ).show("slow", function(){this.setAttribute("display", "block");});
-          $( "[data-card-category='Architecture']" ).hide("slow", function(){this.setAttribute("display", "none");});        }
+          showCards("Art");
+          hideCards("Architecture");
+        }
       }
     </script>
   </body>
