--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,4 +1,5 @@
 .card-text {
+  color: black;
   font-size: 0.85em;
   text-align: center;
 }
@@ -8,7 +9,11 @@
   filter: grayscale(1);
 }
 
-
+.thumb-shadow {
+  -webkit-box-shadow: 2px 3px 13px -3px rgba(0,0,0,1);
+  -moz-box-shadow: 2px 3px 13px -3px rgba(0,0,0,1);
+  box-shadow: 2px 3px 13px -3px rgba(0,0,0,1);
+}
 
 
 #navbar {
@@ -18,7 +23,7 @@
 
 .nav>li>a:focus, .nav>li>a:hover {
   text-decoration: none;
-  background-color: rgba(60, 60, 60, 1);
+  background-color: rgba(0, 0, 0, 1);
 }
 
 a:focus, a:hover {
@@ -27,8 +32,8 @@ a:focus, a:hover {
 }
 
 .navbar-inverse {
-  background-color: rgba(60, 60, 60, 1);
-  border-color: rgba(60, 60, 60, 1);
+  background-color: rgba(0, 0, 0, 1);
+  border-color: rgba(0, 0, 0, 1);
 }
 
 .navbar-brand {
@@ -57,8 +62,9 @@ a:focus, a:hover {
 
 .lightbox {
   position: relative;
-  padding-top: 20px;
-  padding-bottom: 20px;
+  padding: 20px;
+  /*padding-top: 20px;
+  padding-bottom: 20px;*/
   margin-top:50px;
   top:0;
   left:0;
@@ -66,7 +72,7 @@ a:focus, a:hover {
   align-content: center;
 
   /*background: rgba(255, 255, 255, 0.8);*/
-  background: rgba(60, 60, 60, 1);
+  background: rgba(0, 0, 0, 1);
 
   overflow:hidden;
   display: block;
@@ -81,21 +87,15 @@ a:focus, a:hover {
 #lbImg {
   width:auto;
   height:auto;
+  display:block;
+  margin: auto;
 }
-
-#lightbox > div {
-  padding-top: 20px;
-  padding-left: 20px;
-  padding-right: 40px;
-  background: rgba(60, 60, 60, 1);
-  border: none;
-}
-
 
 .lbAnimate {
   opacity: 1;
   /*height: auto;*/
   height: 100vh;
+  /*height: 100%;*/
   align-items: center;
   -webkit-transition: all 0.6s ease;
   -moz-transition: all 0.6s ease;
@@ -112,4 +112,25 @@ a:focus, a:hover {
   color: white;
   font-size: 0.75em;
   font-style: italic;
+}
+
+.carousel-control.right {
+  background-image: none;
+  opacity: 1;
+}
+
+.carousel-control.left {
+  background-image: none;
+  opacity: 1;
+}
+
+
+#lightbox > div {
+  padding-top: 20px;
+  padding-left: 20px;
+  padding-right: 40px;
+  background: rgba(0, 0, 0, 1);
+  border: none;
+  width: auto;
+  /*height: 80vh;*/
 }
