--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -74,25 +74,25 @@
 
       <div id="lightbox" class="lightbox" onclick='hideLightBox();'>
 
-          <div class="thumbnail">
+          <div class="row">
 
             <div class="col-xs-0 col-sm-0 col-md-0 col-lg-2"></div>
 
-            <div class="col-xs-12 col-sm-12 col-md-7 col-lg-6">
-                <img id="lbImg" class="img-responsive img-thumbnail" src="https://dummyimage.com/640x640/000/fff">
-                
-                <!-- Left and right controls -->
-                <a class="left carousel-control hidden" href="#" data-slide="prev" onclick="prevImg(event);">
-                  <span class="glyphicon glyphicon-chevron-left"></span>
-                  <span class="sr-only">Previous</span>
-                </a>
-                <a class="right carousel-control hidden" href="#" data-slide="next" onclick="nextImg(event);">
-                  <span class="glyphicon glyphicon-chevron-right"></span>
-                  <span class="sr-only">Next</span>
-                </a>
+            <div class="col-center col-xs-12 col-sm-12 col-md-8 col-lg-6">
+                  <img id="lbImg" class="img-responsive img-rounded" src="https://dummyimage.com/640x640/000/fff">
+
+                  <!-- Left and right controls -->
+                  <a class="left carousel-control hidden" href="#" data-slide="prev" onclick="prevImg(event);">
+                    <span class="glyphicon glyphicon-chevron-left"></span>
+                    <span class="sr-only">Previous</span>
+                  </a>
+                  <a class="right carousel-control hidden" href="#" data-slide="next" onclick="nextImg(event);">
+                    <span class="glyphicon glyphicon-chevron-right"></span>
+                    <span class="sr-only">Next</span>
+                  </a>
             </div>
 
-            <div class="col-xs-12 col-sm-12 col-md-5 col-lg-4 caption">
+            <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4 caption">
               <h3 id="lbTitle" class="text-white">Title</h3>
               <h5 id="lbDescription" class="text-white">Description</h5>
             </div>
