--- a/public/css/app.css
+++ b/public/css/app.css
@@ -26,6 +26,8 @@
   background-color: rgba(0, 0, 0, 1);
 }
 
+
+
 a:focus, a:hover {
   color: white;
   text-decoration: underline;
@@ -55,7 +57,15 @@ a:focus, a:hover {
 
 
 #aboutMe > div {
-  padding-top:60px;
+  /*padding-top:60px;*/
+
+  height: auto;
+  width: auto;
+  margin: 20px auto 20px auto;
+  padding-top:20px;
+  padding-bottom:20px;
+  background-color: white;
+  border-radius: 5px;
 }
 
 
