--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="architecture art portfolio professional cv">
     <meta name="author" content="Javier Aparicio Conesa">
-    <!-- <link rel="icon" href="../../../../favicon.ico"> -->
+    <link rel="icon" href="img/favicon.ico">
     <title>Agniezka Wiewiorowska</title>
 
     <!-- CSS Libraries-->
