Corrected title typo

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -6,7 +6,7 @@
     <meta name="description" content="architecture art portfolio professional cv">
     <meta name="author" content="Javier Aparicio Conesa">
     <link rel="icon" href="img/favicon.ico">
-    <title>Agniezka Wiewiorowska</title>
+    <title>Agnieszka Wiewiorowska</title>
 
     <!-- CSS Libraries-->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
