--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -13,14 +13,14 @@
 
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
 
+    <link href="https://fonts.googleapis.com/css?family=Architects+Daughter|Ubuntu" rel="stylesheet">
+
     <!-- CSS App files-->
     <link rel="stylesheet" href="css/app.css">
 
 
   </head>
   <body>
-
-    <!-- <div class="container"> -->
 
 
     <nav class="navbar navbar-inverse navbar-fixed-top">
@@ -32,14 +32,13 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Agnieszka Wiewiorowska</a>
+          <a class="navbar-brand" href="#" onclick="navSelectOption(0);">Agnieszka Wiewiorowska</a>
         </div>
         <div id="navbar" class="collapse navbar-collapse navbar-right">
           <ul class="nav nav-pills nav-fill navbar-bottom">
-            <li role="presentation" class="active" onclick="navSelectOption(1);"><a href="#"><h6>All</h6></a></li>
-            <li role="presentation" class="" onclick="navSelectOption(2);"><a href="#"><h6>Architecture</h6></a></li>
-            <li role="presentation" class="" onclick="navSelectOption(3);"><a href="#"><h6>Art</h6></a></li>
-            <li role="presentation" class="" onclick="navSelectOption(4);"><a id="aboutMeOpt" href="#aboutMe" data-toggle="collapse"><h6>About Me</h6></a></li>
+            <li role="presentation" class="" onclick="navSelectOption(1);"><a href="#"><h6>Architecture</h6></a></li>
+            <li role="presentation" class="" onclick="navSelectOption(2);"><a href="#"><h6>Art</h6></a></li>
+            <li role="presentation" class="" onclick="navSelectOption(3);"><a id="aboutMeOpt" href="#aboutMe" data-toggle="collapse"><h6>About Me</h6></a></li>
           </ul>
         </div>
         <!--/.nav-collapse -->
@@ -53,8 +52,8 @@
                 <div class="col-sx-12 col-sm-12 col-med-6 col-sm-8">
                   <h4 class="text-white">About Me</h4>
                     <blockquote class="blockquote-reverse">
-                      <p style="font-style:italic;">I'm a great architect and artist, so... Hire me bitch!</p>
-                      <footer>Someone famous</footer>
+                      <p style="font-style:italic;">Architect. One who drafts a plan of your house, and plans a draft of your money.</p>
+                      <footer>Ambrose Bierce</footer>
                     </blockquote>
                 </div>
 
@@ -74,35 +73,40 @@
     </nav>
 
 
+    <div id="lightbox" class="lightbox" onclick='hideLightBox();'>
+      <div class="row">
 
+        <div class="col-xs-0 col-sm-0 col-md-0 col-lg-2"></div>
 
+        <div class="col-center col-xs-12 col-sm-12 col-md-8 col-lg-6">
+              <img id="lbImg" class="img-responsive img-rounded" src="https://dummyimage.com/640x640/000/fff">
 
+              <!-- Left and right controls -->
+              <a class="left carousel-control hidden" href="#" data-slide="prev" onclick="prevImg(event);">
+                <span class="glyphicon glyphicon-chevron-left"></span>
+                <span class="sr-only">Previous</span>
+              </a>
+              <a class="right carousel-control hidden" href="#" data-slide="next" onclick="nextImg(event);">
+                <span class="glyphicon glyphicon-chevron-right"></span>
+                <span class="sr-only">Next</span>
+              </a>
+        </div>
 
-      <div id="lightbox" class="lightbox" onclick='hideLightBox();'>
-
-          <div class="row">
-
-            <div class="col-xs-0 col-sm-0 col-md-0 col-lg-2"></div>
-
-            <div class="col-center col-xs-12 col-sm-12 col-md-8 col-lg-6">
-                  <img id="lbImg" class="img-responsive img-rounded" src="https://dummyimage.com/640x640/000/fff">
-
-                  <!-- Left and right controls -->
-                  <a class="left carousel-control hidden" href="#" data-slide="prev" onclick="prevImg(event);">
-                    <span class="glyphicon glyphicon-chevron-left"></span>
-                    <span class="sr-only">Previous</span>
-                  </a>
-                  <a class="right carousel-control hidden" href="#" data-slide="next" onclick="nextImg(event);">
-                    <span class="glyphicon glyphicon-chevron-right"></span>
-                    <span class="sr-only">Next</span>
-                  </a>
-            </div>
-
-            <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4 caption">
-              <h3 id="lbTitle" class="text-white">Title</h3>
-              <h5 id="lbDescription" class="text-white">Description</h5>
-            </div>
-
-          </div>
+        <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4 caption">
+          <h3 id="lbTitle" class="text-white">Title</h3>
+          <h5 id="lbDescription" class="text-white">Description</h5>
+        </div>
 
       </div>
+    </div>
+
+
+    <div class="jumbotron">
+      <div class="container">
+        <h2>Welcome to my portfolio</h2>
+        <blockquote class="blockquote-reverse">
+          Here, then, is what I wanted to tell you of my architecture. I created it with courage and idealism, but also with an awareness of the fact that what is important is life, friends, and attempting to make this unjust world a better place in which to live.
+          <footer>Oscar Niemeyer</footer>
+        </blockquote>
+      </div>
+    </div>
